Finish and update README

--- a/weather.html
+++ b/weather.html
@@ -10,11 +10,14 @@
     <script src='weather.js'></script>
   </head>
   <body>
-    <h1>Get You Some Weather</h1>
+    <div id='container'>
+      <h1>Get You Some Weather</h1>
 
-    <form id='form' method='post'>
-      City <input class='form-box' type="text" name="city">
-      <input id='submit' type="submit" value="Search Weather">
-    </form>
+      <form id='form' method='post'>
+        City <input class='form-box' type="text" name="city">
+        <input id='submit' type="submit" value="Search Weather">
+      </form>
+    </div>
+
   </body>
 </html>
